lots of improvements

--- a/mathgame/achievements.html
+++ b/mathgame/achievements.html
@@ -21,10 +21,10 @@
         </div>
         <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
           <ul class="nav navbar-nav">
-            <li><a href="#/">Login</a></li>
-            <li><a href="#/logout">Logout</a></li>
-            <li><a href="register.html">Register</a></li>
-            <li><a href="#/profile">Profile</a></li>
+            <li><a href="help.html">Help</a></li>
+            <li><a href="achievements.html">Achievements</a></li>
+            <li><a href="scores.html">Scores</a></li>
+            <li><a href="faq.html">FAQs</a></li>
           </ul>
         </nav>
       </div>
@@ -36,34 +36,34 @@
   <div class="achievements">
     <table>
       <tr>
-        <td>Reach Level 1</td>
-        <td>Second Cell</td>
-        <td>Third Cell</td>
+        <td><strong>Reach Level 1</strong></td>
+        <td>Play your first game</td>
+        <td><img class="achievement-img" src="number1.jpe" alt="number 1"></img></td>
       </tr>
       <tr>
-        <td>Reach Level 2</td>
-        <td>Second Cell</td>
-        <td>Third Cell</td>
+        <td><strong>Reach Level 2</strong></td>
+        <td>Get a score of 10 or more</td>
+        <td><img class="achievement-img" src="number2.png" alt="number 2"></img></td>
       </tr>
       <tr>
-        <td>Reach Level 3</td>
-        <td>Second Cell</td>
-        <td>Third Cell</td>
+        <td><strong>Reach Level 3</strong></td>
+        <td>Get a score of 20 or more</td>
+        <td><img class="achievement-img" src="number3.png" alt="number 3"></img></td>
       </tr>
       <tr>
-        <td>Reach Level 4</td>
-        <td>Second Cell</td>
-        <td>Third Cell</td>
+        <td><strong>Reach Level 4</strong></td>
+        <td>Get a score of 30 or more</td>
+        <td><img class="achievement-img" src="number4.png" alt="number 4"></img></td>
       </tr>
       <tr>
-        <td>Reach Level 5</td>
-        <td>Second Cell</td>
-        <td>Third Cell</td>
+        <td><strong>Reach Level 5</strong></td>
+        <td>Get a score of 40 or more</td>
+        <td><img class="achievement-img" src="number5.jpg" alt="number 5"></img></td>
       </tr>
       <tr>
-        <td>Reach Level 6</td>
-        <td>Second Cell</td>
-        <td>Third Cell</td>
+        <td><strong>Reach Level 6</strong></td>
+        <td>Get a score of 50 or more</td>
+        <td><img class="achievement-img" src="number6.jpe" alt="number 6"></img></td>
       </tr>
     </table>
   </div>
@@ -72,7 +72,5 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
   <script src="math.js"></script>
-  
-  <script src="authentication.js"></script>
   
 </body>
