--- a/mathgame/help.html
+++ b/mathgame/help.html
@@ -34,14 +34,14 @@
   <h1 class="text-center">How To Play</h1>
   
   <div id="game-help">
-    <p>In this math game, you are given two expressions.</p>
-    <p>Your goal is to compare the two expressions</p>
+    <p>In this math game, you are given two expressions. Your objective is to compare the two expressions.
+		Determine if the first expression is larger, equal to or less than the second expression.</p>
     <div class="exp-block">
       <div class="exp1 example">4 + 5</div>
       <div class="exp2 example">1 + 3</div>
     </div>
     
-    <p>In this case the first expression is greater, so you would click the greater than button</p>
+    <p>In this case, the first expression is greater. Click the greater than button.</p>
     <div class="exp-block">
       <div class="exp1 example">2 + 4</div>
       <div class="exp2 example">5 + 1</div>
