--- a/mathgame/index.html
+++ b/mathgame/index.html
@@ -60,9 +60,9 @@
       </p>
     </div>
 
-    <div class="game-block"></div>
+    <div id="game-block"></div>
 
-    <div class="controls"></div>
+    <div id="controls"></div>
     
     <div class="options">
       <button class="btn btn-primary" id="new-game" onclick="startGame()">New Game</button>  
