--- a/mathgame/achievements.html
+++ b/mathgame/achievements.html
@@ -1,5 +1,5 @@
 <head>
-  <title>Math Game</title>
+  <title>Achievements</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css"></link>
   <link rel="stylesheet" href="styles.css"></link>
 </head>
@@ -38,32 +38,32 @@
       <tr>
         <td><strong>Reach Level 1</strong></td>
         <td>Play your first game</td>
-        <td><img class="achievement-img" src="number1.jpe" alt="number 1"></img></td>
+        <td><img class="achievement-img" src="images/number1.jpe" alt="number 1"></img></td>
       </tr>
       <tr>
         <td><strong>Reach Level 2</strong></td>
         <td>Get a score of 10 or more</td>
-        <td><img class="achievement-img" src="number2.png" alt="number 2"></img></td>
+        <td><img class="achievement-img" src="images/number2.png" alt="number 2"></img></td>
       </tr>
       <tr>
         <td><strong>Reach Level 3</strong></td>
         <td>Get a score of 20 or more</td>
-        <td><img class="achievement-img" src="number3.png" alt="number 3"></img></td>
+        <td><img class="achievement-img" src="images/number3.png" alt="number 3"></img></td>
       </tr>
       <tr>
         <td><strong>Reach Level 4</strong></td>
         <td>Get a score of 30 or more</td>
-        <td><img class="achievement-img" src="number4.png" alt="number 4"></img></td>
+        <td><img class="achievement-img" src="images/number4.png" alt="number 4"></img></td>
       </tr>
       <tr>
         <td><strong>Reach Level 5</strong></td>
         <td>Get a score of 40 or more</td>
-        <td><img class="achievement-img" src="number5.jpg" alt="number 5"></img></td>
+        <td><img class="achievement-img" src="images/number5.jpg" alt="number 5"></img></td>
       </tr>
       <tr>
         <td><strong>Reach Level 6</strong></td>
         <td>Get a score of 50 or more</td>
-        <td><img class="achievement-img" src="number6.jpe" alt="number 6"></img></td>
+        <td><img class="achievement-img" src="images/number6.jpe" alt="number 6"></img></td>
       </tr>
     </table>
   </div>
