--- a/mathgame/scores.html
+++ b/mathgame/scores.html
@@ -5,66 +5,47 @@
 </head>
 
 <body>
-  
-  <header>
-    <nav class='navbar navbar-static-top navbar-inverse' id='top' role='banner'>
-      <div class='container'>
-        <div class='navbar-header'>
-          <button class='navbar-toggle collapsed' type='button' data-toggle='collapse' data-target='.bs-navbar-collapse'>
-            <span class='sr-only'>Toggle navigation</span>
-            <span class='icon-bar'></span>
-            <span class='icon-bar'></span>
-            <span class='icon-bar'></span>
-          </button>
-          <a href='index.html' class='navbar-brand'>
-            <span id='fun'>Fun</span>
-            <span id='math'>Math</span>
-            <span id='game'>Game</span>
-          </a>
 
-        </div>
-        <nav class='collapse navbar-collapse bs-navbar-collapse' role='navigation'>
-          <ul class='nav navbar-nav'>
-            <li><a href='help.html'>Help</a></li>
-            <li><a href='achievements.html'>Achievements</a></li>
-            <li><a href='scores.html'>Scores</a></li>
-            <li><a href='faq.html'>FAQs</a></li>
-          </ul>
-        </nav>
-      </div>
-    </nav>
+  <header class='my-header'>
+
   </header>
-  
+
   <h1 class="text-center">High Scores Table</h1>
-  
+
   <div class='achievements'>
     <table id='scores-table'>
+
       <tr class='gold'>
         <td><strong>Rank 1</strong></td>
         <td></td>
       </tr>
+
       <tr class='silver'>
         <td><strong>Rank 2</strong></td>
         <td></td>
       </tr>
+
       <tr class='bronze'>
         <td><strong>Rank 3</strong></td>
         <td></td>
       </tr>
+
       <tr>
         <td><strong>Rank 4</strong></td>
         <td></td>
       </tr>
+
       <tr>
         <td><strong>Rank 5</strong></td>
         <td></td>
       </tr>
+
     </table>
   </div>
-  
+
   <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
   <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js'></script>
   <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js'></script>
-  <script src='scores.js'></script>
-  
+  <script src='scripts/scores.js'></script>
+
 </body>
