Add more styles

--- a/mathgame/achievements.html
+++ b/mathgame/achievements.html
@@ -7,7 +7,7 @@
 <body>
 
   <!-- We will load the header dynamically with jQuery load -->
-  <header class='my-header'>
+  <header id='my-header'>
 
   </header>
 
@@ -109,10 +109,14 @@
     </table>
   </div>
 
+  <footer>
+    <p class='text-center'>Written by Richard G. Hamilton - Front End Web Developer</p>
+  </footer>
+  
   <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
   <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js'></script>
   <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js'></script>
-  <script src="acripts/scores.js"></script>
+  <script src='scripts/scores.js'></script>
   <script src='scripts/achievements.js'></script>
 
 </body>
