--- a/mathgame/header.html
+++ b/mathgame/header.html
@@ -20,6 +20,7 @@
         <li><a href='achievements.html'>Achievements</a></li>
         <li><a href='scores.html'>Scores</a></li>
         <li><a href='faq.html'>FAQs</a></li>
+        <li><a href='related.html'>More Games</a></li>
       </ul>
     </nav>
   </div>
