--- a/mathgame/index.html
+++ b/mathgame/index.html
@@ -23,8 +23,8 @@
      }(document, 'script', 'facebook-jssdk'));
   </script>
 
-  <header class='my-header'>
-
+  <header id='my-header'>
+  
   </header>
 
   <h1 class='text-center'>Math Game</h1>
