--- a/mathgame/faq.html
+++ b/mathgame/faq.html
@@ -1,17 +1,17 @@
 <head>
   <title>Frequently Asked Questions</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css"></link>
-  <link rel="stylesheet" href="styles.css"></link>
+  <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'></link>
+  <link rel='stylesheet' href='styles.css'></link>
 </head>
 
 <body>
-  <header class='my-header'>
+  <header id='my-header'>
 
   </header>
 
-  <h1 class="text-center">Frequently Asked Questions</h1>
+  <h1 class='text-center'>Frequently Asked Questions</h1>
 
-  <div class="questions-block">
+  <div id='questions-block'>
     <h3>Question 1: What is this game?</h3>
     <p>Answer: This is an arcade style math game.</p>
 
@@ -27,12 +27,12 @@
   </div>
 
   <footer>
-    <p class="text-center">Written by Richard G. Hamilton - Front End Web Developer</p>
+    <p class='text-center'>Written by Richard G. Hamilton - Front End Web Developer</p>
   </footer>
 
   <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-  <script src="scripts/math.js"></script>
+  <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js'></script>
+  <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js'></script>
+  <script src='scripts/math.js'></script>
 
 </body>
