--- a/mathgame/help.html
+++ b/mathgame/help.html
@@ -1,44 +1,48 @@
 <head>
   <title>Math Game</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css"></link>
-  <link rel="stylesheet" href="styles.css"></link>
+  <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'></link>
+  <link rel='stylesheet' href='styles.css'></link>
 </head>
 
 <body>
 
-  <header class='my-header'>
+  <header id='my-header'>
     
   </header>
 
-  <h1 class="text-center">How To Play</h1>
+  <h1 class='text-center'>How To Play</h1>
 
-  <div id="game-help">
+  <div id='game-help'>
     <p>In this math game, you are given two expressions. Your objective is to compare the two expressions.
     Determine if the first expression is larger, equal to or less than the second expression.</p>
-    <div class="exp-block">
-      <div class="exp1 example">4 + 5</div>
-      <div class="exp2 example">1 + 3</div>
+    <div class='exp-block'>
+      <div class='exp1 example'>4 + 5</div>
+      <div class='exp2 example'>1 + 3</div>
     </div>
 
     <p>In this case, the first expression is greater. Click the greater than button.</p>
-    <div class="exp-block">
-      <div class="exp1 example">2 + 4</div>
-      <div class="exp2 example">5 + 1</div>
+    <div class='exp-block'>
+      <div class='exp1 example'>2 + 4</div>
+      <div class='exp2 example'>5 + 1</div>
     </div>
     <p> Here, both expressions equal 6. You click on the equals button</p>
-    <div class="exp-block">
-      <div class="exp1 example">2 + 1</div>
-      <div class="exp2 example">3 + 7</div>
+    <div class='exp-block'>
+      <div class='exp1 example'>2 + 1</div>
+      <div class='exp2 example'>3 + 7</div>
     </div>
 
     <p>The left hand expression is lower than the right hand expression. Click less than</p>
 
   </div>
 
+  <footer>
+    <p class='text-center'>Written by Richard G. Hamilton - Front End Web Developer</p>
+  </footer>
+  
   <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-	<script src="scripts/math.js"></script>
-  <script src="scripts/expressions.js"></script>
+  <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js'></script>
+  <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js'></script>
+  <script src='scripts/math.js'></script>
+  <script src='scripts/expressions.js'></script>
 
 </body>
