--- a/mathgame/scores.html
+++ b/mathgame/scores.html
@@ -1,16 +1,16 @@
 <head>
   <title>Math Game</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css"></link>
-  <link rel="stylesheet" href="styles.css"></link>
+  <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'></link>
+  <link rel='stylesheet' href='styles.css'></link>
 </head>
 
 <body>
 
-  <header class='my-header'>
+  <header id='my-header'>
 
   </header>
 
-  <h1 class="text-center">High Scores Table</h1>
+  <h1 class='text-center'>High Scores Table</h1>
 
   <div class='achievements'>
     <table id='scores-table'>
@@ -43,6 +43,10 @@
     </table>
   </div>
 
+  <footer>
+    <p class='text-center'>Written by Richard G. Hamilton - Front End Web Developer</p>
+  </footer>
+  
   <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
   <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js'></script>
   <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js'></script>
