--- a/mathgame/header.html
+++ b/mathgame/header.html
@@ -1,27 +1,28 @@
-<nav class='navbar navbar-static-top navbar-inverse' id='top' role='banner'>
-  <div class='container'>
-    <div class='navbar-header'>
-      <button class='navbar-toggle collapsed' type='button' data-toggle='collapse' data-target='.bs-navbar-collapse'>
-        <span class='sr-only'>Toggle navigation</span>
-        <span class='icon-bar'></span>
-        <span class='icon-bar'></span>
-        <span class='icon-bar'></span>
-      </button>
-      <a href='index.html' class='navbar-brand'>
-        <span id='fun'>Fun</span>
-        <span id='math'>Math</span>
-        <span id='game'>Game</span>
-      </a>
 
-    </div>
-    <nav class='collapse navbar-collapse bs-navbar-collapse' role='navigation'>
-      <ul class='nav navbar-nav'>
-        <li><a href='help.html'>Help</a></li>
-        <li><a href='achievements.html'>Achievements</a></li>
-        <li><a href='scores.html'>Scores</a></li>
-        <li><a href='faq.html'>FAQs</a></li>
-        <li><a href='related.html'>More Games</a></li>
-      </ul>
-    </nav>
-  </div>
+<nav ng-controller='navController' class='navbar navbar-static-top navbar-inverse' id='top' role='banner'>
+	<div class='container'>
+		<div class='navbar-header'>
+			<button class='navbar-toggle collapsed' type='button' data-toggle='collapse' data-target='.bs-navbar-collapse'>
+				<span class='sr-only'>Toggle navigation</span>
+				<span class='icon-bar'></span>
+				<span class='icon-bar'></span>
+				<span class='icon-bar'></span>
+			</button>
+			<a href='index.html' class='navbar-brand'>
+				<span id='fun'>Fun</span>
+				<span id='math'>Math</span>
+				<span id='game'>Game</span>
+			</a>
+
+		</div>
+		<nav class='collapse navbar-collapse bs-navbar-collapse' role='navigation'>
+			<ul class='nav navbar-nav'>
+				<li><a href='help.html'>Help</a></li>
+				<li><a href='achievements.html'>Achievements</a></li>
+				<li><a href='scores.html'>Scores</a></li>
+				<li><a href='faq.html'>FAQs</a></li>
+				<li><a href='related.html'>More Games</a></li>
+			</ul>
+		</nav>
+	</div>
 </nav>
