Fix mistake with stylesheet rendering

--- a/mathgame/help.html
+++ b/mathgame/help.html
@@ -3,7 +3,7 @@
   <head>
     <title>Math Game</title>
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'></link>
-    <link rel='stylesheet' href='styles.css'></link>
+    <link rel='stylesheet' href='assets/stylesheets/styles.css'></link>
   </head>
 
   <body>
