--- a/mathgame/index.html
+++ b/mathgame/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Math Game</title>
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'></link>
-    <link rel='stylesheet' href='assets/stylesheets/styles.css'></link>
+    <link rel='stylesheet' href='../assets/stylesheets/styles.css'></link>
   </head>
 
   <body>
@@ -57,9 +57,9 @@
 
         <div id='options'>
           <button class='btn btn-primary' id='new-game' ng-click='newGame()'>New Game</button>
-          <a class='btn btn-success' id='help' href='help.html'>How To Play</a>
-          <a class='btn btn-warning' id='achievements' href='achievements.html'>Achievements</a>
-          <a class='btn btn-danger' id='top-scores' href='scores.html'>Top Scores</a>
+          <a class='btn btn-success' id='help' href='views/help.html'>How To Play</a>
+          <a class='btn btn-warning' id='achievements' href='views/achievements.html'>Achievements</a>
+          <a class='btn btn-danger' id='top-scores' href='views/scores.html'>Top Scores</a>
         </div>
       </div>
   
@@ -75,13 +75,13 @@
     <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js'></script>
     <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js'></script>
     <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js'></script>
-    <script src='scripts/data.js'></script>
-    <script src='scripts/app.js'></script>
-    <script src='scripts/services/game.js'></script>
-    <script src='scripts/controllers/navController.js'></script>
-    <script src='scripts/controllers/achievementsController.js'></script>
-    <script src='scripts/controllers/scoresController.js'></script>
-    <script src='scripts/controllers/gamesController.js'></script>
+    <script src='../scripts/data.js'></script>
+    <script src='../scripts/app.js'></script>
+    <script src='../scripts/services/game.js'></script>
+    <script src='../scripts/controllers/navController.js'></script>
+    <script src='../scripts/controllers/achievementsController.js'></script>
+    <script src='../scripts/controllers/scoresController.js'></script>
+    <script src='../scripts/controllers/gamesController.js'></script>
 
   </body>
 
