--- a/mathgame/header.html
+++ b/mathgame/header.html
@@ -10,7 +10,7 @@
         <span class='icon-bar'></span>
       </button>
       
-      <a ng-href="{{ page == home? 'index.html' : '../index.html' }}" class='navbar-brand'>
+      <a ng-href="{{ page == home? '/' : '../' }}" class='navbar-brand'>
         <span id='fun'>Fun</span>
         <span id='math'>Math</span>
         <span id='game'>Game</span>
